--- a/react-app-package/index.css
+++ b/react-app-package/index.css
@@ -5,3 +5,47 @@
 .input-container {
   display: inline-flex;
 }
+
+.logo {
+  height: 100px;
+  width: 100px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  border: 1px solid black;
+  justify-content: space-between;
+}
+
+.header > ul {
+  display: flex;
+  padding: 5px;
+  list-style: none;
+}
+
+.header > ul > li {
+  margin: 0 5px;
+  font-size: 20px;
+}
+
+.res-card {
+  width: 200px;
+  padding: 5px;
+  margin: 5px 10px;
+  background-color: #f0f0f0;
+  border: 1px solid transparent;
+  &:hover {
+    cursor: pointer;
+    border: 1px solid black;
+  }
+}
+
+.res-image {
+  width: 100%;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
