--- a/react-app-package/index.css
+++ b/react-app-package/index.css
@@ -54,3 +54,15 @@
   display: flex;
   margin: 10px 10px;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  margin: 10px;
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
+}
