--- a/react-app-package/index.css
+++ b/react-app-package/index.css
@@ -71,3 +71,9 @@ a {
   color: black;
   text-decoration: none;
 }
+
+.user-card {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid black;
+}
