--- a/react-app-package/index.css
+++ b/react-app-package/index.css
@@ -1,79 +1,2 @@
-#heading {
-  color: red;
-}
-
-.input-container {
-  display: inline-flex;
-}
-
-.logo {
-  height: 100px;
-  width: 100px;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  border: 1px solid black;
-  justify-content: space-between;
-}
-
-.header > ul {
-  display: flex;
-  padding: 5px;
-  list-style: none;
-}
-
-.header > ul > li {
-  margin: 0 5px;
-  font-size: 20px;
-}
-
-.res-card {
-  width: 200px;
-  padding: 5px;
-  margin: 5px 10px;
-  background-color: #f0f0f0;
-  border: 1px solid transparent;
-  &:hover {
-    cursor: pointer;
-    border: 1px solid black;
-  }
-}
-
-.res-image {
-  width: 100%;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.search-filter-container {
-  display: flex;
-  margin: 10px 10px;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  margin: 20px;
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-.user-card {
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid black;
-}
+/* This import will make sure the project is enabled with tailwindcss usage */
+@import "tailwindcss";
